# devicev3

./: .cproject  .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
component/device_sdk/core/: config.h
component/device_sdk/porting/: CMakeLists.txt
component/device_sdk/service/sv_btn/: sv_btn.h
component/device_sdk/service/sv_sensor/: sv_loadcell.cpp  sv_loadcell.h
device_sdk/bsp/: CMakeLists.txt
device_sdk/bsp/inc/: bsp_io.h  bsp_timer.h
device_sdk/bsp/src/: bsp_io.c  bsp_timer.c
device_sdk/core/: CMakeLists.txt  config.h
device_sdk/drivers/: CMakeLists.txt
device_sdk/drivers/hx711/: hx711.c
device_sdk/drivers/tm1637/: tm1637.c  tm1637.h
device_sdk/hal/inc/: hal_flash.h  hal_io.h
device_sdk/hal/src/: hal_flash.c  hal_io.c
device_sdk/hals/: CMakeLists.txt
device_sdk/hals/inc/: hal_flash.h  hal_io.h
device_sdk/hals/src/: hal_flash.c  hal_io.c  hal_timer.c
device_sdk/libs/: CMakeLists.txt
device_sdk/porting/inc/: porting.h
device_sdk/porting/src/: esp_io.c
device_sdk/service/: CMakeLists.txt
device_sdk/service/sv_btn/: sv_btn.c  sv_btn.h
device_sdk/service/sv_display/: sv_display.c  sv_display.h
device_sdk/service/sv_iot/: sv_iot.c  sv_iot.h
device_sdk/service/sv_sensor/: sv_loadcell.c  sv_loadcell.h
device_sdk/utils/: CMakeLists.txt
device_sdk/utils/string/: cstring.c
device_sdk/utils/tiny-json/: tiny-json.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c  test.c  test_mqtt.c  test_timer.c
